--- a/debian/control
+++ b/debian/control
@@ -1,16 +1,17 @@
-Source: mirror-switch-tools
+Source: mirror-switching-tool
 Section: admin
 Priority: optional
 Maintainer:  iceleaf916 <kaisheng.ye@gmail.com>
-Build-Depends: debhelper (>= 8.0.0), python (>= 2.6.3~)
+Build-Depends: debhelper (>= 8.0.0), python (>= 2.6.3~), deepin-gettext-tools
 Standards-Version: 3.9.2
 Homepage: https://github.com/Deepin
 
-Package: mirror-switch-tools
+Package: mirror-switching-tool
 Architecture: all
 Depends: ${shlibs:Depends},
  ${misc:Depends},
  python,
  gksu,
-Description: Mirror switch tools
- Mirror switch tools for Deepin
+ python-gtk2
+Description: Mirror switching tool
+ Mirror switching tool for Deepin
